# dxpr

./: .gitignore  Cargo.toml  LICENSE  README.md  ci.sh  test-coverage.sh
.cargo/: config.toml
.github/workflows/: ci.yaml
src/: eval.rs  expr.rs  grad.rs  leaf.rs  lib.rs  ops.rs  test.rs
src/ops/: mod-fwd.rs  mod.rs  mul.rs
