[package]
name = "dxpr"
version = "0.1.0"
authors = ["Will Sturgeon <willstrgn@gmail.com>"]
edition = "2021"
description = "Differentiable expression templates in Rust."
readme = "README.md"
repository = "https://github.com/wrsturgeon/dxpr"
license = "Zlib"
license-file = "LICENSE"
keywords = [
  "expression-templates",
  "expression",
  "differentiable",
  "autograd",
  "generic",
]
categories = [
  "algorithms",
  "data-structures",
  "mathematics",
  "no-std",
  "rust-patterns",
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# none!

[features]
default = ["std"]
std = []
