[package]
name = "dxpr"
version = "0.2.3"
authors = ["Will Sturgeon <willstrgn@gmail.com>"]
edition = "2021"
description = "Differentiable expression templates in compile-time, dependency-free, no_std Rust."
documentation = "https://docs.rs/dxpr/latest/dxpr/"
readme = "README.md"
homepage = "https://crates.io/crates/dxpr"
repository = "https://github.com/wrsturgeon/dxpr"
license = "Zlib"
# license-file = "LICENSE"
keywords = [
  "expression-templates",
  "expression",
  "differentiable",
  "autograd",
  "generic",
]
categories = [
  "algorithms",
  "data-structures",
  "mathematics",
  "no-std",
  "rust-patterns",
]
exclude = ["ci.sh", "test-coverage.sh"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# none!

[features]
default = ["std"]
std = []

[badges]
maintenance = { status = "actively-developed" }
